[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cactus-test-definitions"
dynamic = ["version", "readme"]
authors = [
  { name = "Mike Turner", email = "mike.turner@anu.edu.au" },
  { name = "Josh Vote", email = "joshua.vote@anu.edu.au" },
]
maintainers = [
  { name = "Mike Turner", email = "mike.turner@anu.edu.au" },
  { name = "Josh Vote", email = "joshua.vote@anu.edu.au" },
]
description = "CSIP-AUS Client Test Harness Test Definitions"
keywords = ["CSIP-AUS", "client", "testing", "definitions"]
requires-python = ">=3.12"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development",
  "Typing :: Typed",
]
dependencies = [
  "pyyaml>=6.0.2,<7",
  "pyyaml-include>=2.2,<3",
  "dataclass-wizard==0.35.0,<1",
]

[project.urls]
Homepage = "https://github.com/bsgip/cactus-test-definitions"
Documentation = "https://github.com/bsgip/cactus-test-definitions/blob/main/README.md"
Repository = "https://github.com/bsgip/cactus-test-definitions.git"
Issues = "https://github.com/bsgip/cactus-test-definitions/issues"
Changelog = "https://github.com/bsgip/cactus-test-definitions/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
  "bandit",
  "ruff",
  "ty",
  "tox",
  "python-dotenv[cli]",
  "types-PyYAML",
]
test = ["pytest", "pytest-xdist", "assertical"]
docs = ["sphinx"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "S", "C90", "B", "UP", "ANN", "N"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "ANN", "N"]

[tool.ty.src]
include = ["src", "tests"]

[tool.setuptools.dynamic]
version = { attr = "cactus_test_definitions.__version__" }
readme = { file = ["README.md"], content-type = "text/markdown" }

[tool.setuptools.package-data]
"cactus_test_definitions" = ["py.typed"]
